# lake-satellite-image-etl

./: .gitignore  BaseDockerfile  Dockerfile  README.md  pyproject.toml  template.yml
.github/workflows/: deploy_etl.yml
src/: database.py  google_maps.py  ice_on_date_feature_selection.py  ice_on_date_ml.py  requirements.txt  satellite_api.py  test.py
src/app/: database.py  main.py  requirements.txt  satellite_api.py
